Changed css so that the site would look the same in all monitors, added the framework for a login system, continued to modify the javascript behind the drop down menus and the graph generation.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
     <head>    
         <script src="http://d3js.org/d3.v3.js"></script>
         <script src="js/drop.js"></script>
+        <script src="js/login.js"></script>
         <script src="js/linechart.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
-
+    
     <div class="container">
+        <div class="uppermenu">
+            <div id="logbtn" onclick="login()">
+                <p id="lgntext">login</p>
+            </div>
+        </div>
+        <div class="logincover"></div>
         <div class="menu">
             
            <div onclick="drop(1)" class="buttoncon" id="1">
