Syncing development between development computers.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <div id="logbtn" onclick="login()">
                 <p id="lgntext">login</p>
             </div>
+            <input class="inputbox" type="password">
+            <p class="logtext">Password:</p>
+            <input class="inputbox" type="text">
+            <p class="logtext">Username:</p>
         </div>
         <div class="logincover"></div>
         <div class="menu">
