Continued working on user account system, added icons to 2 button tabs and built the framework to allow forms in the drop downs.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="js/drop.js"></script>
         <script src="js/login.js"></script>
         <script src="js/linechart.js"></script>
+        <script src="js/logout.js"></script>
         <script src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -44,11 +45,11 @@
         <br>
         Age:             <input id="R8" type="text" name="age"><br>
         <br>
-		<div id="logbtn" onclick="registeruser()">
-			<p id="lgntext">Register!</p>
+		<div id="logbtn2" onclick="registeruser()">
+			<p id="lgntext2">Register!</p>
 		</div>
-		<div id="logbtn" onclick="registerclose()">
-			<p id="lgntext">Cancel</p>
+		<div id="logbtn2" onclick="registerclose()">
+			<p id="lgntext2">Cancel</p>
 		</div>
         </div>
         <div class="logincover"></div>
@@ -80,7 +81,7 @@
            
            <div onclick="drop(4)" class="buttoncon" id="4">
                <div class="buttontextcon" id="t4">
-                    <p class="buttontext">Add Excerise</p>
+                    <p class="buttontext">Add Exercise</p>
                </div>
                <div class="buttonimg" id="i4"></div>
            </div>
