Finished designing the base UI.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            
            <div onclick="drop(3)" class="buttoncon" id="3">
                <div class="buttontextcon" id="t3">
-                    <p class="buttontext">Change Insulin Dosage</p>
+                    <p id="tester3" class="buttontext">Change Insulin Dosage</p>
                </div>
                <div class="buttonimg" id="i3"></div>
            </div>
