Fixed the register script to allow users to actually register, fixed typos, changed the colour scheme.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</form>
         </div>
         <div class="registerdrop">
-		<p class="alertmsg">Please fill out the following information to regiter</p><br>
+		<p class="alertmsg">Please fill out the following information to register</p><br>
         Username:        <input id="R1" type="text" name="Username"><br>
         <br>
         Password:        <input id="R2" type="password" name="password"><br>
