Fixed an issue where the login did not work, added a favicon, added the title tag to the html.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <meta charset="utf-8">
     <head>    
+		<title>SKRA</title>
+		<link rel="icon" href="/img/icon.ico"/>
         <script src="http://d3js.org/d3.v3.js"></script>
         <script src="js/drop.js"></script>
         <script src="js/login.js"></script>
