Small color correction, added placeholder text.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                         <p id="buttontext" >Login</p>
                     </div>
                     <div id="userform">
-                        <input id="password" class="input" type="password">
+                        <input id="password" class="input" type="password" placeholder="Password">
                     </div>
                     <div id="passwordform">
-                        <input id="username" class="input" type="text">
+                        <input id="username" class="input" type="text" placeholder="Username">
                     </div>
                 </form>
             </div>
