Fixed css position issues.

--- a/index.html
+++ b/index.html
@@ -29,24 +29,25 @@
             <div class="content">
                 <img src="img/skraname.svg" alt="SKRA" id="logo" class="prelog">
             </div>
-            <div class="registerdiv">
-                Username:<input type="text" name="Username"><br>
-                <br>
-                Password:<input type="password" name="password"><br>
-                <br>
-                Confirm Password:<input type="password" name="confirmpassword"><br>
-                <br>
-                Email Address:<input type="text" name="email"><br>
-                <br>
-                Name:<input type="text" name="name"><br>
-                <br>
-                Weight(kg):<input type="text" name="weight"><br>
-                <br>
-                Height(cm):<input type="text" name="height"><br>
-                <br>
-                Age:<input type="text" name="age"><br>
-                <br>
-            </div>
+        </div>
+        <div class="registerdiv">
+            <h2>Create an account and start tracking!</h2>
+            Username:<input type="text" name="Username"><br>
+            <br>
+            Password:<input type="password" name="password"><br>
+            <br>
+            Confirm Password:<input type="password" name="confirmpassword"><br>
+            <br>
+            Email Address:<input type="text" name="email"><br>
+            <br>
+            Name:<input type="text" name="name"><br>
+            <br>
+            Weight(kg):<input type="text" name="weight"><br>
+            <br>
+            Height(cm):<input type="text" name="height"><br>
+            <br>
+            Age:<input type="text" name="age"><br>
+            <br>
         </div>
     </body>
 </html>
