Further design of the registry system.

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
             </div>
         </div>
         <div class="registerdiv">
-            <h2>Create an account and start tracking!</h2>
-            Username:<input type="text" name="Username"><br>
+            <h2>Create an account and start using skra today, for free!</h2>
+            <p>Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
+            <input type="text" name="Username" class="regi" placeholder="Username"><br>
             <br>
-            Password:<input type="password" name="password"><br>
+            <input type="password" name="password" class="regi" placeholder="Password">
+            <input type="password" name="confirmpassword" class="regi" placeholder="Confirm Password"><br>
             <br>
-            Confirm Password:<input type="password" name="confirmpassword"><br>
+            <input type="text" name="email" class="regi" placeholder="Email"><br>
             <br>
-            Email Address:<input type="text" name="email"><br>
+            <input type="text" name="name" class="regi" placeholder="Name"><br>
             <br>
-            Name:<input type="text" name="name"><br>
+            <input type="text" name="weight" class="regi" placeholder="Weight (Kg)"><br>
             <br>
-            Weight(kg):<input type="text" name="weight"><br>
+            <input type="text" name="height" class="regi" placeholder="Height (cm)"><br>
             <br>
-            Height(cm):<input type="text" name="height"><br>
-            <br>
-            Age:<input type="text" name="age"><br>
+            <input type="text" name="age" class="regi" placeholder="Age"><br>
             <br>
         </div>
     </body>
