--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+    <body id="body">
+        <div class="prc"></div>
         <div class="container">
             <div class="menu">
                 <form>
-                    <div id="register" onclick="register()">
+                    <div id="register" onclick="signup()">
                         <p id="buttontext">Sign Up</p>
                     </div>
                     <div id="login" onclick="login()">
@@ -48,6 +49,12 @@
             <br>
             <input type="text" name="age" class="regi" placeholder="Age"><br>
             <br>
+            <div id="rmb" onclick="closereg()">
+                 <p id="buttontext">Submit</p>
+            </div>
+            <div id="rmb" onclick="register()">
+                <p id="buttontext">Cancel</p>
+            </div>
         </div>
     </body>
 </html>
