--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>SKRA</title>
         <link rel="icon" href="/img/icon.ico">
-        <script src="http://d3js.org/d3.v3.js"></script>
-        <script src="js/login.js"></script>
-        <script src="js/register.js"></script>
+        <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
+        <script type="text/javascript" src="js/login.js"></script>
+        <script type="text/javascript" src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     </head>
