Added sockets.io.js to the project. Mini version did not work in testing.

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>SKRA</title>
         <link rel="icon" href="/img/icon.ico">
+        <script type="text/javascript" src="js/socket.io.js"></script>
         <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
         <script type="text/javascript" src="js/register.js"></script>
