Fixed an issue where the username was not being stored properly.

--- a/public/index.html
+++ b/public/index.html
@@ -35,20 +35,20 @@
         <div class="registerdiv">
             <h2>Create an account and start using skra today, for free!</h2>
             <p>Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
-            <input id="username" type="text" name="Username" class="regi" placeholder="Username"><br>
+            <input id="user" type="text" class="regi" placeholder="Username"><br>
             <br>
-            <input id="pass" type="password" name="password" class="regi" placeholder="Password">
-            <input id="confpass" type="password" name="confirmpassword" class="regi" placeholder="Confirm Password"><br>
+            <input id="pass" type="password" class="regi" placeholder="Password">
+            <input id="confpass" type="password" class="regi" placeholder="Confirm Password"><br>
             <br>
-            <input id="email" type="text" name="email" class="regi" placeholder="Email"><br>
+            <input id="email" type="text" class="regi" placeholder="Email"><br>
             <br>
-            <input id="name" type="text" name="name" class="regi" placeholder="Name"><br>
+            <input id="name" type="text" class="regi" placeholder="Name"><br>
             <br>
-            <input id="weight" type="text" name="weight" class="regi" placeholder="Weight (Kg)"><br>
+            <input id="weight" type="text" class="regi" placeholder="Weight (Kg)"><br>
             <br>
-            <input id="height" type="text" name="height" class="regi" placeholder="Height (cm)"><br>
+            <input id="height" type="text" class="regi" placeholder="Height (cm)"><br>
             <br>
-            <input id="age" type="text" name="age" class="regi" placeholder="Age"><br>
+            <input id="age" type="text" class="regi" placeholder="Age"><br>
             <br>
             <div id="rmb" onclick="register()">
                  <p id="buttontext">Submit</p>
