Added username registration check.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <div class="registerdiv">
             <h2>Create an account and start using skra today, for free!</h2>
             <p>Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
-            <input id="user" type="text" class="regi" placeholder="Username"><br>
+            <input id="user" type="text" class="regi" placeholder="Username" onblur="checkUser()"><br>
             <br>
             <input id="pass" type="password" class="regi" placeholder="Password">
             <input id="confpass" type="password" class="regi" placeholder="Confirm Password"><br>
