Added email and password verification.

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,10 @@
             <p>Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
             <input id="user" type="text" class="regi" placeholder="Username" onblur="checkUser()"><br>
             <br>
-            <input id="pass" type="password" class="regi" placeholder="Password">
-            <input id="confpass" type="password" class="regi" placeholder="Confirm Password"><br>
+            <input id="pass" type="password" class="regi" placeholder="Password" onblur="checkPassword()">
+            <input id="confpass" type="password" class="regi" placeholder="Confirm Password" onblur="checkPassword()"><br>
             <br>
-            <input id="email" type="text" class="regi" placeholder="Email"><br>
+            <input id="email" type="email" class="regi" placeholder="Email" onblur="checkEmail()"><br>
             <br>
             <input id="name" type="text" class="regi" placeholder="Name"><br>
             <br>
