--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
         <title>SKRA</title>
         <link rel="icon" href="/img/icon.ico">
         <script type="text/javascript" src="js/socket.io.js"></script>
-        <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
+        <script type="text/javascript" src="js/d3.min.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
         <script type="text/javascript" src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body id="body">
         <div class="prc"></div>
