Added a notification to tell the user if hsi inputs are valid.

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="registerdiv">
             <h2>Create an account and start using skra today, for free!</h2>
-            <p>Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
+            <p id="regdes">Skra is a multifunction diabetic tracking program which allows users to log everything from their bloodsugar to when they exercise</p>
             <input id="user" type="text" class="regi" placeholder="Username" onblur="checkUser()"><br>
             <br>
             <input id="pass" type="password" class="regi" placeholder="Password" onblur="checkPassword()">
