Finished client side registration verification.

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
             <br>
             <input id="name" type="text" class="regi" placeholder="Name" onblur="checkName()"><br>
             <br>
-            <input id="weight" type="text" class="regi" placeholder="Weight (Kg)" onblur="checkNumeric('weight')"><br>
+            <input id="weight" type="text" class="regi" placeholder="Weight (Kg)" onblur="checkNumeric('weight', 4)"><br>
             <br>
-            <input id="height" type="text" class="regi" placeholder="Height (cm)" onblur="checkNumeric('height')"><br>
+            <input id="height" type="text" class="regi" placeholder="Height (cm)" onblur="checkNumeric('height', 5)"><br>
             <br>
-            <input id="age" type="text" class="regi" placeholder="Age" onblur="checkNumeric('age')"><br>
+            <input id="age" type="text" class="regi" placeholder="Age" onblur="checkNumeric('age', 6)"><br>
             <br>
             <div class="rmb" onclick="register()">
                  <p class="buttontext">Submit</p>
