Added simple notification popup to tell the user if login was wrong.

--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,8 @@
             </div>
             <br>
         </div>
+        <div id="ilogin">
+            <p id="iloginp">Incorrect Login</p>
+        </div>
     </body>
 </html>
