--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>SKRA</title>
-        <link rel="icon" href="/img/icon.ico">
+        <link rel="shortcut icon" href="img/favicon.ico" >
         <script type="text/javascript" src="js/socket.io.js"></script>
         <script type="text/javascript" src="js/d3.min.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
