--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
         <link rel="shortcut icon" href="img/favicon.ico" >
         <script type="text/javascript" src="js/socket.io.js"></script>
         <script type="text/javascript" src="js/d3.min.js"></script>
+        <script src="js/c3.min.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
         <script type="text/javascript" src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="css/c3.css" rel="stylesheet" type="text/css">
     </head>
     <body id="body">
         <div class="prc"></div>
