added screen resizing to the c3.js graph

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                     <input id="username" class="input" type="text" placeholder="Username" tabindex=1>
                 </div>
             </div>
-            <div class="content">
+            <div id="content">
                 <img src="img/skraname.svg" alt="SKRA" id="logo" class="prelog">
             </div>
         </div>
