Fixed an issue with the graph not sizing correctly in some browsers.

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
             <div id="content">
                 <img src="img/skraname.svg" alt="SKRA" id="logo" class="prelog">
             </div>
+            <div class="footer">
+            </div>
         </div>
         <div class="registerdiv">
             <h2>Create an account and start using skra today, for free!</h2>
