More work on the footer.

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,12 @@
                 <img src="img/skraname.svg" alt="SKRA" id="logo" class="prelog">
             </div>
             <div class="footer">
+                <div id="footerlogo">
+                    <svg width="25" height="25">
+                        <image xlink:href="img/skra.svg" width="25" height="25"/>
+                    </svg>
+                </div>
+                <p class="footertext">SKRA</p>
             </div>
         </div>
         <div class="registerdiv">
