Added orbitron font to the project, more footer work.

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,13 @@
                     </svg>
                 </div>
                 <p class="footertext">SKRA</p>
+                &nbsp;&nbsp;&nbsp;
+                <p class="footerlink">Terms</p>
+                <p class="footerlink">Privacy</p>
+                <p class="footerlink">Creative Rights</p>
+                <p class="footerlink">Contact Us</p>
+                <p class="footerlink">FAQ</p>
+                <p class="footerlink">Copyright</p>
             </div>
         </div>
         <div class="registerdiv">
