--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="js/d3.min.js"></script>
         <script src="js/c3.min.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
+        <script type="text/javascript" src="js/footer.js"></script>
         <script type="text/javascript" src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href="css/c3.css" rel="stylesheet" type="text/css">
@@ -43,7 +44,7 @@
                 <p class="footerlink">Creative Rights</p>
                 <p class="footerlink">Contact Us</p>
                 <p class="footerlink">FAQ</p>
-                <p class="footerlink">Copyright</p>
+                <p class="footerlink" onclick="showFooterElement('.copyright')">Copyright</p>
             </div>
         </div>
         <div class="registerdiv">
@@ -71,6 +72,10 @@
                 <p class="buttontext">Cancel</p>
             </div>
             <br>
+        </div>
+        <div class="copyright">
+            <h2>Copyright</h2>
+            <p>asd</p>
         </div>
         <div id="ilogin">
             <p id="iloginp">Incorrect Login</p>
