Updated fonts, footer.js dismiss function.

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             </div>
             <br>
         </div>
-        <div class="copyright">
+        <div class="copyright" onclick="dismissFooterElement('.copyright')">
             <h2>Copyright</h2>
             <p>asd</p>
         </div>
