More css updates, moved info boxes higher.

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <p class="footertext">SKRA</p>
                 &nbsp;&nbsp;&nbsp;
-                <p class="footerlink" onclick="showFooterElement('.terms')">Terms</p>
+                <p class="footerlink" onclick="showFooterElement('.terms')" onmouseover="footerColor('.copyright')">Terms</p>
                 <p class="footerlink" onclick="showFooterElement('.privacy')">Privacy</p>
                 <p class="footerlink" onclick="showFooterElement('.creative')">Creative Rights</p>
                 <p class="footerlink" onclick="showFooterElement('.contact')">Contact Us</p>
