Added hover events to footer items to display their use.

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@
                 </div>
                 <p class="footertext">SKRA</p>
                 &nbsp;&nbsp;&nbsp;
-                <p class="footerlink" onclick="showFooterElement('.terms')" onmouseover="footerColor('.copyright')">Terms</p>
-                <p class="footerlink" onclick="showFooterElement('.privacy')">Privacy</p>
-                <p class="footerlink" onclick="showFooterElement('.creative')">Creative Rights</p>
-                <p class="footerlink" onclick="showFooterElement('.contact')">Contact Us</p>
-                <p class="footerlink" onclick="showFooterElement('.faq')">FAQ</p>
-                <p class="footerlink" onclick="showFooterElement('.copyright')">Copyright</p>
+                <p class="footerlink" onclick="showFooterElement('.terms')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">Terms</p>
+                <p class="footerlink" onclick="showFooterElement('.privacy')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">Privacy</p>
+                <p class="footerlink" onclick="showFooterElement('.creative')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">Creative Rights</p>
+                <p class="footerlink" onclick="showFooterElement('.contact')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">Contact Us</p>
+                <p class="footerlink" onclick="showFooterElement('.faq')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">FAQ</p>
+                <p class="footerlink" onclick="showFooterElement('.copyright')" onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">Copyright</p>
             </div>
         </div>
         <div class="registerdiv">
