Began building server side tracking of active users.

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
         <div class="copyright" onclick="dismissFooterElement('.copyright')">
             <h2>Copyright</h2>
             <p>asd</p>
+            <p>Click anywhere on the rectangle to dismiss me!</p>
         </div>
         <div id="ilogin">
             <p id="iloginp">Incorrect Login</p>
