Started building out the logout system.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="menu">
                 <div id="register" onclick="signup()">
-                    <p class="buttontext">Sign Up</p>
+                    <p id="trans1" class="buttontext">Sign Up</p>
                 </div>
                 <div id="login" onclick="login()">
                     <p class="buttontext" >Login</p>
