--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,55 @@
         <title>SKRA</title>
         <link rel="shortcut icon" href="img/favicon.ico" >
         <script type="text/javascript" src="js/socket.io.js"></script>
-        <script type="text/javascript" src="js/d3.min.js"></script>
-        <script src="js/c3.min.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
-        <script type="text/javascript" src="js/footer.js"></script>
         <script type="text/javascript" src="js/register.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link href="css/c3.css" rel="stylesheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700|Volkhov|Lora:400,700|Lato:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Cinzel:400,900|Alfa+Slab+One|Inknut+Antiqua:400,900|Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     </head>
     <body id="body">
         <div class="container">
             <div class="menu-wrapper">
                 <div class="menu">
-                    <div id="register" onclick="signup()"> <p id="trans1" class="buttontext">REGISTER</p> </div>
+                    <div id="register" onclick="signup()"> <p class="buttontext">REGISTER</p> </div>
                     <div id="login" onclick="login()"> <p class="buttontext" >LOGIN</p> </div>
+                    <div id="motto" onclick="login()"> <p class="fight" >FIND YOUR FIGHT</p> </div>
                 </div>
             </div>
 
             <div id="content">
-                <img src="img/skraname.svg" alt="SKRA" id="logo" class="prelog">
+                <img src="img/skraname.svg" alt="SKRA" id="logo" class="plog">
             </div>
+
+            <div id="entry">
+                <div id="accountcreation">
+                <p>Welcome to the new you, welcome to Skra.</p>
+                <label for="Username">Username</label> 
+                <input type="text"><br>
+                <label for="email">Email</label> 
+                <input type="email"><br>
+                <label for="password">Password </label>
+                <input type="password"> <br>
+                <label for="age">Age</label>
+                <input type="number" min=18><br> 
+                <label for="height">Height (inches)</label>
+                <input type="number"><br>
+                <label for="weight">Weight (lbs)</label>
+                <input type="number"><br>
+                <input type="checkbox" id="entry-ck-box">
+                <label for="terms and conditions">Do you agree to the terms and conditions?</label><br>
+                    <div id="jointheclan" onclick="signup()"> <p class="buttontext123">Register</p> </div>
+            </div>
+            <div id="loginscreen">
+                <p>Already a member? Sign in below!</p>
+                <label for="Username">Username/Email</label> 
+                <input type="text"><br>
+                <label for="password">Password</label> 
+                <input type="password"><br>
+                <div id="logintowonderland" onclick="login()"> <p class="buttontext123" >Sign In</p> </div>
+            
+            </div>
+
         </div>
     </body>
 </html>
